<resources>
    <string name="app_name">Ligera</string>
    
    <!-- General -->
    <string name="retry">Retry</string>
    <string name="dismiss">Dismiss</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    
    <!-- Network state messages -->
    <string name="network_reconnected">Back online</string>
    <string name="network_offline">You\'re offline. Some features may be limited.</string>
    <string name="offline_mode">Offline Mode</string>
    <string name="offline_cannot_refresh">Can\'t refresh while offline</string>
    <string name="processing_offline_requests">Processing %d pending requests</string>
    <string name="operation_queued">Request saved for when you\'re back online</string>
    
    <!-- Empty state messages -->
    <string name="empty_products">No Products Found</string>
    <string name="empty_products_message">We couldn\'t find any products at the moment. Please try again later.</string>
    
    <!-- Product screens -->
    <string name="products">Products</string>
    <string name="featured_products">Featured Products</string>
    <string name="popular_products">Popular Products</string>
    <string name="product_details">Product Details</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    
    <!-- Cart and checkout -->
    <string name="cart">Cart</string>
    <string name="checkout">Checkout</string>
    <string name="empty_cart">Your cart is empty</string>
    <string name="empty_cart_message">Add some products to your cart to get started</string>
    
    <!-- Orders -->
    <string name="orders">Orders</string>
    <string name="order_details">Order Details</string>
    <string name="empty_orders">No Orders Found</string>
    <string name="empty_orders_message">You haven\'t placed any orders yet</string>
    
    <!-- Profile -->
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    
    <!-- Authentication -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
</resources>

<resources>
    <string name="app_name">Ligera.</string>
    <string name="background_image">Background Image</string>
    <string name="login_welcome_content">Yay! You\'re back! Thanks for shopping with us.\nWe have excited deals and promotions going on, grab your pick now! </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_cart">Cart</string>
    <string name="title_liked">Favourites</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="searchbar_hint">Search here\n</string>
    <string name="find_products">Find Products</string>
    <string name="notification">Notification</string>
    <string name="image">image</string>
    <string name="contents">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book…detail</string>
    <string name="shop_now">Shop now</string>
    <string name="share">share</string>
</resources>