<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/title_home"
        app:showAsAction="never"/>

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/baseline_shopping_bag_24"
        android:title="@string/title_cart"
        app:showAsAction="never"/>

    <item
        android:id="@+id/navigation_liked"
        android:icon="@drawable/baseline_favorite_border_24"
        android:title="@string/title_liked"
        app:showAsAction="never"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_outline_24"
        android:title="@string/title_profile"
        app:showAsAction="never"/>

</menu>